# catdex

./: Cargo.toml
migrations/2021-07-05-141909_create_cats/: up.sql
src/: main.rs  models.rs  schema.rs
static/: add.html  cat.html  index.html
