[package]
name = "catdex"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
serde = "1.0.110"
serde_json = "1.0.53"
handlebars = {version = "4.1.0", features = ["dir_source"]}
diesel = {version  = "1.4.4", features = ["postgres", "r2d2"]}
r2d2 = "0.8.8"
